cosmetic corrections for javadoc

--- a/src/main/resources/gdv/xport/satz/package.html
+++ b/src/main/resources/gdv/xport/satz/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Hierunter finden sich die verschiedenen Satzarten (und Datensaetze) wie z.B. Vorsatz und Nachsatz.
+Hierunter finden sich die verschiedenen Satzarten (und Datensaetze).
 <p>
 Die oberste Klasse, von der alle weiteren Klassen abgeleitet sind, ist die
 {@link gdv.xport.satz.Satz}-Klasse, von der die beiden Klassen
