--- a/src/main/resources/gdv/xport/util/package.html
+++ b/src/main/resources/gdv/xport/util/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Utility-Klassen
+Einige Utility-Klassen.
 <p>
 Hier befinden sich einige Utility-Klassen, die nicht in die anderen
 Packages passten.
