failing TeildatensatzTest.testExport() fixed

--- a/src/main/resources/gdv/xport/util/template.html
+++ b/src/main/resources/gdv/xport/util/template.html
@@ -2,13 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>{1}</title>
-  <style type="test/css">
+  <style type="text/css">
+  	.Satz '{'
+  		background-color: #f2cca3;
+  		font-family: monospace;
+  		font-size: small;
+  		margin-bottom: 1px;
+  		white-space: pre;
+  	'}'
+  	.Zeichen '{'
+  		background-color: #f9eeda;
+  	'}'
   </style>
 </head>
 <body>
   <h2>{1}</h2>
-<pre>
 {2}
-</pre>
 </body>
 </html>
