--- a/src/main/resources/gdv/xport/util/template.html
+++ b/src/main/resources/gdv/xport/util/template.html
@@ -6,12 +6,20 @@
   	.Satz '{'
   		background-color: #f2cca3;
   		font-family: monospace;
-  		font-size: small;
   		margin-bottom: 1px;
   		white-space: pre;
   	'}'
+  	.AlphaNumFeld, .Betrag, .BetragMitVorzeichen, .Bezeichner, .Datum, .Version, .VUNummer, .NumFeld '{'
+  		background-color: #f2cca3;
+  		border-color: #f9eeda;
+  		border-right-style: solid;
+  		border-width: 1px;
+  	'}'
   	.Zeichen '{'
   		background-color: #f9eeda;
+  		border-color: #f2cca3;
+  		border-right-style: solid;
+  		border-width: 1px;
   	'}'
   </style>
 </head>
