details to generated HTML page added

--- a/src/main/resources/gdv/xport/util/template.html
+++ b/src/main/resources/gdv/xport/util/template.html
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="{0}"?>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+  <meta http-equiv="content-type" content="text/html; charset={0}" />
   <title>{1}</title>
   <style type="text/css">
   	.Satz '{'
@@ -57,5 +58,7 @@
   	<span class="Zeichen" style="white-space: pre;"> Einzelnes Zeichen </span>
   	<span class="Undefiniert" style="white-space: pre;"> Undefiniert </span>
   </p>
+  <h2>Details</h2>
+{3}
 </body>
 </html>
