minor changes in documentation

--- a/src/main/resources/gdv/xport/demo/package.html
+++ b/src/main/resources/gdv/xport/demo/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Einige Utility-Klassen.
+Einige Demo-Klassen.
 <p>
 In diesem Package befinden sich einige Beispiele, die den Umgang mit
 GDV-Xport verdeutlichen sollen.
