updated to new home

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
     <p>gdv.xport ist eine Java-Bibliothek, die den Umgang mit dem GDV-Format erleichtert. Sie vereinfacht den Export und Import dieses Datenformats und ermöglicht die Validierung der verschiedenen Datensätze.
 
 Das "x" in port steht fur "im"- und "ex"-port. </p><h2>Dependencies</h2>
-<p>siehe http://labs.agentes.de/gdv.xport/dependencies.html</p>
+<p>siehe http://www.aosd.de/gdv.xport/dependencies.html</p>
 <h2>Install</h2>
-<p>siehe http://labs.agentes.de/gdv.xport/manual/hello.html</p>
+<p>siehe http://www.aosd.de/gdv.xport/manual/hello.html</p>
 <h2>License</h2>
 <p>The Apache Software License, Version 2.0</p>
 <h2>Authors</h2>
-<p>oboehm (boehm@javatux.de)<br/><br/>      </p>
+<p>oboehm (ob@aosd.de)<br/><br/>      </p>
 <h2>Contact</h2>
-<p>Oliver Boehm (boehm@javatux.de)<br/>      </p>
+<p>Oliver Boehm (ob@aosd.de)<br/>      </p>
 
 
     <h2>Download</h2>
