fehlende Package-Beschreibungen fuer Javadoc hinzugefuegt

--- a/src/main/resources/gdv/xport/demo/package.html
+++ b/src/main/resources/gdv/xport/demo/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Einige Demo-Klassen.
+Einige Demo-Klassen wie {@link gdv.xport.demo.HelloWorld} und andere.
 <p>
 In diesem Package befinden sich einige Beispiele, die den Umgang mit
 GDV-Xport verdeutlichen sollen.
