--- a/src/main/resources/gdv/xport/feld/package.html
+++ b/src/main/resources/gdv/xport/feld/package.html
@@ -1,6 +1,7 @@
 <HTML>
 <BODY>
-Hier befinden sich die verschiendenen Feld-Typen wie AlphaNumFeld oder NumFeld.
+Hier befinden sich die verschiedenen Feld-Typen wie {@link gdv.xport.feld.AlphaNumFeld}
+oder {@link gdv.xport.feld.NumFeld}.
 <p>
 Eigentlich kennt das GDV-Format nur den 
 Feld-Typ "AN" ({@link gdv.xport.feld.AlphaNumFeld} fuer alpha-numerisches Feld)
