--- a/src/main/resources/gdv/xport/io/package.html
+++ b/src/main/resources/gdv/xport/io/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Einige Utility-Klassen.
+Einige Klassen fuer die Ein-/Ausgabe (I/O).
 <p>
 Alles, was mit I/O (Ein-/Ausgabe) zusammenhaengt.
 
