--- a/lib/src/main/resources/gdv/xport/satz/feld/common/package.html
+++ b/lib/src/main/resources/gdv/xport/satz/feld/common/package.html
@@ -2,13 +2,7 @@
 <BODY>
 Beschreibungen einiger allgemeiner Satzarten.
 <p>
-Hier sind einige allgemeine Teile einiger Satzarten über Enum-Klassen
-beschrieben.
-Dabei repraesentieren die Konstanten in der Enum-Klasse die einzelnen
-Felder der entsprechenden Satzart. Annotationen aus
-{@link gdv.xport.annotation} reichern diese Konstanten um zusaetzliche
-Informationen wie Start-Adresse und Laenge an, die dann zur Laufzeit
-ausgewertet werden.
+Hier sind einige allgemeine Standteil wie die ersten 7 Kopffelder versammlt.
 
 @since 0.6
 </BODY>
